# llm-tool-experiments

./: LLM has a gun.ipynb  README.md  pyproject.toml  requirements.txt
